@@ -1,6 +1,7 @@
 2006-10-05  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Added patch by Andreas Otto (field order and sorting in mod1 for Redirect view)
+ * Fixed bug 1530: defaultToHTMLsuffixOnPrev has to be cleaned in decodeSpURL
  * Fixed bug 2439: [RealURL] Prepend domain name before path in realurl modules
  * Fixed bug 3988: /start/Feedback gets not found because of uppercase; searchTitle_searchPid() return does not use "encoded" version in lookup
 
